# salesintellApp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  V0_PROMPT.md  analyze.py  app.py  build_reports.py  dev.py  pyproject.toml  server.py  sync_unleashed.py
Example Data/: 1. Products Export - 17.6.26.csv  2. View Products Export - 17.6.26.csv  4. Invoice Enquiry Export - 17.6.26.csv  Meeting Notes.docx  Sales Intelligent System - Data Summary.docx
constants/: __init__.py  columns.py  config.py  customers.py  feedback.py  meeting_notes.py  products.py  recommended_actions.py  rfm.py  unleashed.py
frontend/: V0_WORKFLOW.md  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/visit/[code]/: page.js
frontend/src/components/: AccountCard.jsx  Pitch.jsx
frontend/src/lib/: api.js  ui.js  utils.js
utils/: candidates.py  dataio.py  datasource.py  parsing.py  port.py  preferences.py  products.py  profile.py  recommend.py  report.py  rfm.py  unleashed.py  unleashed_sync.py
webapp/: app.js  index.html  style.css
