[project]
name = "searay-sales-intelligence"
version = "0.1.0"
description = "Searay Sales Intelligence POC — RFM + upsell reports and a rep-facing rule-based learning loop"
requires-python = ">=3.11"
# Standard library only — no third-party dependencies. Add new ones with `uv add`.
dependencies = []

[project.scripts]
app = "app:main"
dev = "dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["constants", "utils"]
only-include = ["app.py", "dev.py", "server.py", "constants", "utils"]

[tool.uv]
package = true
